fix: clicking on stat to roll will scroll to top on mobile

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -17,6 +17,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   min-width: 320px;
+  scroll-behavior: smooth;
 }
 
 .material-symbols-outlined {
